--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
 		"svelte-preprocess": "^4.7.4",
 		"tailwindcss": "^2.2.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-netlify": "^1.0.0-next.0"
+	}
 }
