add engines to package.json for proper node version

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
 		"svelte-preprocess": "^4.7.4",
 		"tailwindcss": "^2.2.4"
 	},
+	"engines": {
+		"node":">=12.2"
+	},
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-netlify": "^1.0.0-next.0"
